Fixed selector margin on small screen

--- a/src/components/DocumentSelector/style.css
+++ b/src/components/DocumentSelector/style.css
@@ -70,4 +70,7 @@
   position: relative;
   width: 100%;
   margin-top: 5.5rem;
+  @media (--small-viewport) {
+    margin-top: 0;
+  }
 }
